--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@ body {
     color: white;
     padding: 15px 0;
     text-align: center;
+    position: relative;
+    width:100%;
+    height:12%;
+    top:0;
+  }
+  #home{
+    position: relative;
+    display:block;
   }
   
   nav ul {
